package edu.fiuba.algo3.modelo.Movimiento;

import edu.fiuba.algo3.modelo.Posicion;

public interface Movimiento {
    void mover(Posicion posicion);

}
