@startuml
    'https://plantuml.com/class-diagram

    class Grilla{
        # tamanioEjeX: int
        # tamanioEjeY: int
        # cantEsquinasEjeX: int
        # cantEsquinasEjeY: int
        + {static} Grilla() : Grilla
        + moverVehiculo( Vehiculo vehiculo ) : void
        + insertarAccionableEnPosicion ( Posicion pos, Accionable objeto ) : void
        + obtenerAccionableEnPosicion ( Posicion pos ) : Accionable
    }

    class Archivo{
        - nombre : string
        + {static} Archivo(String nombre) : void
        + leer() : String
        + agregarJugador(Jugador jugador) : void
        + existeJugador(String nombre) : boolean
        + cantidadDeJugadores() : int
    }

    class GPS {
        + {static} GPS() : GPS
        + agregarJugador(Jugador j1) : void
        + movermeHacia(Movimiento movimiento) : void
    }

    class RegistroJugadores{
        + {static} RegistroJugadores(String nombreArchivo) : RegistroJugadores
        + agregarJugadorAlRegistro(Jugador jugador) : void
        + obtenerPuntajeJugador(String nombre) : int
        # existeJugador(String nombre) : Boolean
    }

    class Jugador{
        - nombre : string
        # cantMovimientos : int
        # puntaje : Puntaje
        + {static} Jugador(String nombre) : Jugador
        + sumarMovimiento() : void
    }

    abstract Vehiculo{

        # posicion : Posicion
        # movimientos : int
        # {static} RNG : Random

        + {static} Vehiculo (Posicion pos) : Vehiculo
        + posicionarVehiculo(int posicionX, int posicionY) : void
        + movermeHacia(Movimiento movimiento) : void
        + {abstract} incrementarMovimientosSegunObstaculo(Obstaculo obstaculo) : void
        + {abstract} cambiarVehiculo() : void
        + incrementarMovimientosSegunObstaculo(int penalizacion) : void
        + estasEnEsquiana() : boolean
        + {abstract} cambiasteVehiculo() : Vehiculo
    }

    interface Accionable{
        + Accionar(Vehiculo vehiculo) : void
    }

    class Calle{
        + Accionar(Vehiculo vehiculo) : void
    }

    class Ciudad{
        # inicializador : InicializadorGrilla
        + {static} Ciudad() : Ciudad
        + moverVehiculo( Movimiento movimiento ) : void
    }

    class Posicion{
        - posX : int
        - posY : int
        - ultimaPosEnEsquinaX : int
        - ultimaPosEnEsquinaY : int

        + {static} Posicion(int posX, int posY)
        + establecerEnUltimaPos() : void
        + estasEnEsquina() : boolean
        + boolean equals(Object posicion) : boolean
    }

    interface Sorpresa{
        + sorprender(Vehiculo vehiculo) : void
    }


    interface Obstaculo{
        + aplicarPenalizacion(Moto moto) : void
        + aplicarPenalizacion(Auto auto) : void
        + aplicarPenalizacion(TodoTerreno todoTerreno) : void
        + aplicarPenalizacion(Vehiculo vehiculo) : void
    }


    GPS --> Jugador
    GPS --> Ciudad
    Vehiculo --> Posicion

    Grilla "1" --> "*" Accionable
    Ciudad -> Vehiculo
    Ciudad --> Grilla


    Sorpresa ..|> Accionable
    Obstaculo .|> Accionable

    Calle ..|> Accionable

    interface Movimiento{
        +mover( Posicion posicion ) : void
    }

    Vehiculo -> Movimiento
    GPS -> RegistroJugadores
    RegistroJugadores --> Archivo
    Ciudad -> Posicion
    GPS -> Posicion

@enduml